# electron-phonon-scattering-2d

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.ini  readme.md  search-index.js
config/: dc_field_x.ini  dc_field_y.ini  phonons.ini  photovoltaic_o1e-1.ini  two_waves_mixing_x_o10_Ey.ini  two_waves_mixing_x_o15_Ey.ini  two_waves_mixing_x_o1_E1.ini  two_waves_mixing_x_o1_E2.ini  two_waves_mixing_x_o1_Ey.ini  two_waves_mixing_x_o5_E1.ini  two_waves_mixing_x_o5_E2.ini  two_waves_mixing_x_o5_Ey.ini  two_waves_mixing_y_o1_E1.ini  two_waves_mixing_y_o1_E2.ini  two_waves_mixing_y_o1_Ex.ini  two_waves_mixing_y_o5_E1.ini  two_waves_mixing_y_o5_E2.ini  two_waves_mixing_y_o5_Ex.ini
current/: index.html  macro.get_element!.html  sidebar-items.js
electron_phonon_scattering_2d/: fn.create_ensemble.html  index.html
examples/: test.rs
ini/: index.html
linal/: fn.dual_basis.html  index.html  sidebar-items.js  struct.Point.html  struct.Vec2.html  trait.Cross.html
linalg/: Cargo.toml  fn.dual_basis.html  index.html  struct.Point.html  struct.Vec2.html  trait.Cross.html
probability/: index.html  macro.get_element!.html
scattering/: Cargo.toml  fn.create_ensemble.html  index.html  sidebar-items.js
scoped_threadpool/: index.html  struct.Pool.html  struct.Scope.html
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: boltzmann.rs  config.rs  current.rs  fields.rs  files.rs  lib.rs  linalg.rs  macros.rs  main.rs  material.rs  material_specific.rs  modelling.rs  particle.rs  probability.rs  rng.rs  stats.rs  structs.rs  zero.rs
(+106 files in other folders)
